<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dondeestas.SecondActivity" >

    <Button
        android:id="@+id/Barcelona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Bilbao"
        android:layout_alignBottom="@+id/Bilbao"
        android:layout_alignParentRight="true"
        android:text="@string/Barcelona" />

    <Button
        android:id="@+id/Madrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Bilbao"
        android:layout_below="@+id/Bilbao"
        android:layout_marginTop="32dp"
        android:text="@string/Madrid" />

    <Button
        android:id="@+id/Valladolid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Sevilla"
        android:layout_alignLeft="@+id/Barcelona"
        android:text="@string/Valladolid" />

    <Button
        android:id="@+id/Bilbao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:text="@string/Bilbao" />

    <Button
        android:id="@+id/Valencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Madrid"
        android:layout_toRightOf="@+id/Madrid"
        android:text="@string/Valencia" />

    <Button
        android:id="@+id/Sevilla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Madrid"
        android:layout_alignBottom="@+id/Madrid"
        android:layout_alignLeft="@+id/Valencia"
        android:text="@string/Sevilla" />

</RelativeLayout>
